--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@sanity/types": "^3.50.0",
     "@types/node": "^18.17.14",
+    "autoprefixer": "^10.4.20",
     "nuxt": "^3.12.3",
-    "postcss": "^8.4.39",
-    "postcss-nested": "^6.0.1"
+    "postcss": "^8.4.41",
+    "postcss-nested": "^6.0.1",
+    "tailwindcss": "^3.4.9"
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.0",
